--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "repository" : {
     "type" : "git",
-    "url" : "https://github.com/rickytan/json-validator.git"
+    "url" : "https://github.com/rickytan/json-valid.git"
   },
   "bugs" : {
-    "url" : "https://github.com/rickytan/json-validator/issues"
+    "url" : "https://github.com/rickytan/json-valid/issues"
   },
-  "homepage" : "https://github.com/rickytan/json-validator"
+  "homepage" : "https://github.com/rickytan/json-valid"
 }
